# ssdocs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  config.yaml  cspell.json  docker-compose.yml
content/posts/dev/: hello-rustyblog.md
src/: cache.rs  category.rs  config.rs  feeds.rs  generator.rs  indices.rs  main.rs  metadata.rs  parallel.rs  parser.rs  plugin.rs  renderer.rs  search.rs  slug.rs  theme.rs  types.rs
src/plugins/: mod.rs  related_posts.rs
templates/: base.html  category.html  post.html
themes/default/: base.html  category.html  index.html  page.html  post.html  tag.html  tags.html  theme.yaml
themes/default/static/css/: theme.css
