[package]
name = "ssdocs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ssg"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# Markdown parsing
pulldown-cmark = "0.9"

# Frontmatter parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Templating
tera = "1.20"

# Syntax highlighting
syntect = "5.3"

# Utilities
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.5"
percent-encoding = "2.3"

# Hashing (for cache)
blake3 = "1.8"

# File watching (for watch mode)
notify = "6.1"

[dev-dependencies]
tempfile = "3.23"
